# pcl-processing-pipeline

./: CMakeLists.txt  README.md
include/: bounding_box.h  processor.h  processor.inl  processorConfig.h  visualize.h
src/: config.txt  main.cpp  processor.cpp  processor.inl
